Here are the changes we made to the base snake game: