@@ -7,5 +7,7 @@
 </head>
 <body>
 <canvas id="viewport" width="640" height="480"></canvas>
+<h1>State to Conquer: </h1>
+<h2></h2>
 </body>
 </html>
